Joomla! 1.6, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Bug Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

21-Feb-2010 Jean-Marie Simonet
$ Small corrections for mod_article_news

23-Feb-2010 Hannes Papenberg
# refactored mod_newsflash to mod_articles_news - Thanks Rob Clayburn!

23-Feb-2010 Christophe Demko
^ Changing call JHtmlSelect::* to self::* in JHtmlSelect class

23-Feb-2010 Sam Moffatt
# Fix for minor HTML bug in mysql and mysqli drivers

22-Feb-2010 Christophe Demko
# Reverting patch 14969 (introduce a bug). Change the way to load the template language ini
^ Changing call JLanguage::* to self::* in JLanguage class
# Adding the ability to specify a layout and a tmpl in the JControllerForm

21-Feb-2010 Mark Dexter
^ Make filter HTML consistent for back-end screens (Andrea Tarr)
^ Fix system tests to reflect HTML changes

21-Feb-2010 Jean-Marie Simonet
^$ Refactored com_weblinks ini/keys + some

21-Feb-2010 Christophe Demko
# Correcting a bug in component update
# Enabling ftp for installation extension
+ Adding administrator/manifests/files/index.html

20-Feb-2010 Jean-Marie Simonet
^ Changed path to transliteration ascii.php. Thanks Wojtek.
$ Made com_comments.ini back-end parse ini compatible
# Correcting bug in installer template adpater uninstall

19-Feb-2010 Christophe Demko
# Correcting a bug in the codemirror plugin
+$ Adding a language string
+ Adding an background icon in bluestork css

19-Feb-2010 Jean-Marie Simonet
$^ Refactored display of content Category:title to cope with various languages
^ Refactored com_weblinks admin ini/keys + some
^ Revert name changes for templates

18-Feb-2010 Mark Dexter
^ Remove redundant alt attributes for Control Panel icons (Andrea Tarr)

18-Feb-2010 Hannes Papenberg
^ Adding mod_articles_category module - Thanks Omar Ramos!

18-Feb-2010 Christophe Demko
# Correcting some inis