@@ -47,6 +47,8 @@ COM_WEBLINKS_FIELD_TITLE_DESC="Web Link must have a title"
 COM_WEBLINKS_FIELD_TITLE_LABEL="Title"
 COM_WEBLINKS_FIELD_URL_DESC="You must enter a URL."
 COM_WEBLINKS_FIELD_URL_LABEL="Url"
+COM_WEBLINKS_FIELD_COUNTCLICKS_LABEL="Count clicks"
+COM_WEBLINKS_FIELD_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded"
 
 COM_WEBLINKS_FIELD_CONFIG_DESCRIPTION_LABEL="Description"
 COM_WEBLINKS_FIELD_CONFIG_DESCRIPTION_DESC="Show/Hide the description below"
@@ -66,6 +68,8 @@ COM_WEBLINKS_FIELD_CONFIG_SHOWNUMBERS_LABEL="Web links Numbers"
 COM_WEBLINKS_FIELD_CONFIG_SHOWNUMBERS_DESC="Show/Hide the Web links Numbers"
 COM_WEBLINKS_FIELD_CONFIG_SHOWREPORT_LABEL="Reports"
 COM_WEBLINKS_FIELD_CONFIG_SHOWREPORT_DESC="Show/Hide the Report Bad Link option"
+COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_LABEL="Count clicks"
+COM_WEBLINKS_FIELD_CONFIG_COUNTCLICKS_DESC="If set to yes, the number of times the link has been clicked will be recorded"
 
 COM_WEBLINKS_FIELD_LANGUAGE_DESC="Assign a language to this weblink"
 
